--- a/index.html
+++ b/index.html
@@ -57,32 +57,32 @@
 				<div class="col-6">
 					<label for="">web design</label>
 					<div class="progress-bar">
-						<div class="progress red" style="width: 87%">
-							<div class="percentage">87%</div>
+						<div class="progress red" style="width: 90%">
+							<div class="percentage">90%</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-6">
 					<label for="">marketing</label>
 					<div class="progress-bar">
-						<div class="progress blue" style="width: 87%">
-							<div class="percentage">87%</div>
+						<div class="progress blue" style="width: 97%">
+							<div class="percentage">97%</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-6">
 					<label for="">web development</label>
 					<div class="progress-bar">
-						<div class="progress green" style="width: 87%">
-							<div class="percentage">87%</div>
+						<div class="progress green" style="width: 95%">
+							<div class="percentage">95%</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-6">
 					<label for="">seo marketing</label>
 					<div class="progress-bar">
-						<div class="progress yellow" style="width: 87%">
-							<div class="percentage">87%</div>
+						<div class="progress yellow" style="width: 92%">
+							<div class="percentage">92%</div>
 						</div>
 					</div>
 				</div>
@@ -93,6 +93,7 @@
 		<div class="container">
 			<div class="title-group">
 				<h2>working process</h2>
+				<hr class="long">
 				<hr class="short">
 			</div>
 			<div class="row">
@@ -123,7 +124,8 @@
 		<div class="container">
 			<div class="title-group">
 				<h2>what we do?</h2>
-				<hr>
+				<hr class="long">
+				<hr class="short">
 			</div>
 			<div class="row">
 				<div class="col-4">
@@ -162,39 +164,40 @@
 	<section id="sale-info">
 		<div class="container">
 			<div class="row">
-				<col-3>
+				<div class="col-3">
 					<img src="http://placehold.it/38x38?text=icon" alt="icon">
 					<h3>Lorem ipsum.</h3>
-					<div>1425</div>
-				</col-3>
-				<col-3>
+					<h3>1425</h3>
+				</div>
+				<div class="col-3">
 					<img src="http://placehold.it/38x38?text=icon" alt="icon">
 					<h3>Fugiat, nobis!</h3>
-					<div>1425</div>
-				</col-3>
-				<col-3>
+					<h3>1425</h3>
+				</div>
+				<div class="col-3">
 					<img src="http://placehold.it/38x38?text=icon" alt="icon">
 					<h3>Quia, doloribus.</h3>
-					<div>1425</div>
-				</col-3>
-				<col-3>
+					<h3>1425</h3>
+				</div>
+				<div class="col-3">
 					<img src="http://placehold.it/38x38?text=icon" alt="cion">
 					<h3>Dolorum, similique.</h3>
-					<div>1425</div>
-				</col-3>
+					<h3>1425</h3>
+				</div>
 			</div>
 		</div>
 	</section>
 	<section id="pricing-table">
 		<div class="container">
 			<div class="title-group">
-				<h2>Lorem ipsum.</h2>
-				<hr>
+				<h2>pricing table</h2>
+				<hr class="long">
+				<hr class="short">
 			</div>
 			<div class="row">
 				<div class="col-3">
 					<h3>basic</h3>
-					<div>
+					<div class="price">
 						<i class="icon-dollar"></i>
 						<span>39</span>
 						<span>per month</span>
@@ -205,11 +208,11 @@
 						<li>Dolore, hic?</li>
 						<li>Ipsum, possimus.</li>
 					</ul>
-					<a href="">perchase</a>
+					<a href="#" class="button">perchase</a>
 				</div>
 				<div class="col-3">
 					<h3>standard</h3>
-					<div>
+					<div class="price">
 						<i class="icon-dollar"></i>
 						<span>79</span>
 						<span>per month</span>
@@ -220,11 +223,11 @@
 						<li>Dolore, hic?</li>
 						<li>Ipsum, possimus.</li>
 					</ul>
-					<a href="">perchase</a>
+					<a href="#" class="button">perchase</a>
 				</div>
 				<div class="col-3">
 					<h3>premium</h3>
-					<div>
+					<div class="price">
 						<i class="icon-dollar"></i>
 						<span>100</span>
 						<span>per month</span>
@@ -235,11 +238,11 @@
 						<li>Dolore, hic?</li>
 						<li>Ipsum, possimus.</li>
 					</ul>
-					<a href="">perchase</a>
+					<a href="#" class="button">perchase</a>
 				</div>
 				<div class="col-3">
 					<h3>unlimited</h3>
-					<div>
+					<div class="price">
 						<i class="icon-dollar"></i>
 						<span>20</span>
 						<span>per month</span>
@@ -250,7 +253,7 @@
 						<li>Dolore, hic?</li>
 						<li>Ipsum, possimus.</li>
 					</ul>
-					<a href="">perchase</a>
+					<a href="#" class="button">perchase</a>
 				</div>
 			</div>
 		</div>
