--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
 				<div class="col-3">
 					<h3>basic</h3>
 					<div class="price">
-						<i class="icon-dollar"></i>
-						<span>39</span>
-						<span>per month</span>
+						<i class="icon-dollar">$</i>
+						<span class="price-int">39</span>
+						<span class="per-month">per month</span>
 					</div>
 					<ul>
 						<li>Lorem ipsum.</li>
@@ -213,9 +213,9 @@
 				<div class="col-3">
 					<h3>standard</h3>
 					<div class="price">
-						<i class="icon-dollar"></i>
-						<span>79</span>
-						<span>per month</span>
+						<i class="icon-dollar">$</i>
+						<span class="price-int">79</span>
+						<span class="per-month">per month</span>
 					</div>
 					<ul>
 						<li>Lorem ipsum.</li>
@@ -228,9 +228,9 @@
 				<div class="col-3">
 					<h3>premium</h3>
 					<div class="price">
-						<i class="icon-dollar"></i>
-						<span>100</span>
-						<span>per month</span>
+						<i class="icon-dollar">$</i>
+						<span class="price-int">100</span>
+						<span class="per-month">per month</span>
 					</div>
 					<ul>
 						<li>Lorem ipsum.</li>
@@ -243,9 +243,9 @@
 				<div class="col-3">
 					<h3>unlimited</h3>
 					<div class="price">
-						<i class="icon-dollar"></i>
-						<span>20</span>
-						<span>per month</span>
+						<i class="icon-dollar">$</i>
+						<span class="price-int">20</span>
+						<span class="per-month">per month</span>
 					</div>
 					<ul>
 						<li>Lorem ipsum.</li>
