--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main-small.css" media="(max-width:768px)">
 </head>
 <body>
 	<header id="header">
@@ -14,6 +16,13 @@
 					<img src="http://placehold.it/170x108/6FD2FA?text=logo" alt="logo">
 				</a>
 			</div>
+			<div class="icon-menu">
+				<input type="checkbox" id="menu-switch">
+				<label for="menu-switch">
+					<img src="http://placehold.it/108x108/6FD2FA?text=menu"" alt="icon">
+				</label>
+			</div>
+			
 			<nav>
 				<ul class="clear-fix">
 					<li><a href="#">home</a></li>
@@ -129,32 +138,32 @@
 			</div>
 			<div class="row">
 				<div class="col-4">
-					<img src="ttp://placehold.it/40x40/123456?text=icon" alt="icon">
+					<img src="http://placehold.it/40x40/123456?text=icon" alt="icon">
 					<h3>Lorem ipsum.</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, adipisci. Molestias corporis similique, quas quisquam.</p>
 				</div>
 				<div class="col-4">
-					<img src="ttp://placehold.it/40x40/123456?text=icon" alt="icon">
+					<img src="http://placehold.it/40x40/123456?text=icon" alt="icon">
 					<h3>Lorem ipsum.</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, adipisci. Molestias corporis similique, quas quisquam.</p>
 				</div>
 				<div class="col-4">
-					<img src="ttp://placehold.it/40x40/123456?text=icon" alt="icon">
+					<img src="http://placehold.it/40x40/123456?text=icon" alt="icon">
 					<h3>Lorem ipsum.</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, adipisci. Molestias corporis similique, quas quisquam.</p>
 				</div>
 				<div class="col-4">
-					<img src="ttp://placehold.it/40x40/123456?text=icon" alt="icon">
+					<img src="http://placehold.it/40x40/123456?text=icon" alt="icon">
 					<h3>Lorem ipsum.</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, adipisci. Molestias corporis similique, quas quisquam.</p>
 				</div>
 				<div class="col-4">
-					<img src="ttp://placehold.it/40x40/123456?text=icon" alt="icon">
+					<img src="http://placehold.it/40x40/123456?text=icon" alt="icon">
 					<h3>Lorem ipsum.</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, adipisci. Molestias corporis similique, quas quisquam.</p>
 				</div>
 				<div class="col-4">
-					<img src="ttp://placehold.it/40x40/123456?text=icon" alt="icon">
+					<img src="http://placehold.it/40x40/123456?text=icon" alt="icon">
 					<h3>Lorem ipsum.</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, adipisci. Molestias corporis similique, quas quisquam.</p>
 				</div>
